fix spacing contact page

--- a/style.css
+++ b/style.css
@@ -1098,6 +1098,10 @@ margin: 8px 0 40px 0;
 ////////// PRICING PAGE //////////
 -------------------------------- */
 
+.page-template-pricing-page .entry-content {
+	margin-top:40px;
+}
+
 .price-notes {
 	font-size: 0.8em;
   line-height: 1.2em;
@@ -1231,6 +1235,14 @@ margin: 8px 0 40px 0;
     margin-bottom: 1em;
 		text-align:center;
 		margin-top:100px;
+}
+
+/* -------------------------------
+////////// CONTACT PAGE ///////////
+-------------------------------- */
+
+.page-template-contact .entry-content {
+	margin-top:40px;
 }
 
 /* -------------------------------
